// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal screenshot default 1`] = `
":root {
    --clr-bg-gray-1: #ffffff;
    --clr-bg-gray-2: #f6f8fb;
    --clr-bg-gray-3: #eff2f7;
    --clr-bg-gray-500: #a3acbf;

    --clr-el-gray-000: #ffffff;
    --clr-el-gray-010: #cad6ee1a;
    --clr-el-gray-015: #b0bdd626;
    --clr-el-gray-020: #b0bdd633;
    --clr-el-gray-030: #a5b1ca4d;
    --clr-el-gray-040: #8694b066;
    --clr-el-gray-050: #475a8080;
    --clr-el-gray-060: #1a2b4d99;
    --clr-el-gray-070: #000c24b2;
    --clr-el-gray-080: #2f3747;
    --clr-el-gray-090: #121725f2;

    --clr-el-yellow-010: #ffdd574d;
    --clr-el-yellow-020: #ffdd578c;
    --clr-el-yellow-100: #ffdd57;
    --clr-el-yellow-200: #ffd21f;
    --clr-el-yellow-300: #f7c408;

    --clr-el-red-010: #dd00001a;
    --clr-el-red-020: #dd000033;
    --clr-el-red-040: #dd000066;
    --clr-el-red-060: #dd000099;
    --clr-el-red-100: #dd0000;

    --clr-el-green-010: #33b34326;
    --clr-el-green-020: #33b34340;
    --clr-el-green-060: #33b343b2;
    --clr-el-green-100: #33b343;

    --clr-el-blue-010: #498bff33;
    --clr-el-blue-060: #498bffb2;
    --clr-el-blue-100: #498bff;

    --clr-str-black-050: #475a807f;
    --clr-str-black-800: #2f3747;
    --clr-str-black-900: #252a38;

    --clr-str-white-060: #afc2e699;
    --clr-str-white-080: #d1e1ffcc;
    --clr-str-white-100: #fff;

    --clr-str-pure-white-050: #ffffff7f;
    --clr-str-pure-white-060: #ffffffb3;

    --clr-bg-app: var(--clr-bg-gray-3);

    --clr-dash-green-01: #65b812;
    --clr-dash-green-02: #9dd926;
    --clr-dash-green-03: #9dd92666;
    --clr-dash-green-04: #65b81233;

    --clr-dash-yellow-01: #ffcc00;
    --clr-dash-yellow-02: #ffe666;
    --clr-dash-yellow-03: #ffe66666;
    --clr-dash-yellow-04: #ffcc0033;

    --clr-dash-orange-01: #ff9a33;
    --clr-dash-orange-02: #ffb851;
    --clr-dash-orange-03: #ffb85166;
    --clr-dash-orange-04: #ff9a3333;

    --clr-dash-red-01: #e53c1a;
    --clr-dash-red-02: #ff6647;
    --clr-dash-red-03: #ff664766;
    --clr-dash-red-04: #e53c1a33;

    --clr-dash-violet-01: #7a45e6;
    --clr-dash-violet-02: #aa80ff;
    --clr-dash-violet-03: #7a45e533;
    --clr-dash-violet-04: #6e30e833;

    --clr-dash-blue-01: #3388ff;
    --clr-dash-blue-02: #66b3ff;
    --clr-dash-blue-03: #66b3ff66;
    --clr-dash-blue-04: #3388ff33;

    --clr-dash-grey-01: #c2c9d6;
    --clr-dash-grey-02: #e0e6ef;
    --clr-dash-grey-03: #e0e6ef66;
    --clr-dash-grey-04: #c2c9d633;

    --clr-dash-cornflow-01: #6673ff;
    --clr-dash-cornflow-02: #99a2ff;
    --clr-dash-cornflow-03: #99a2ff66;
    --clr-dash-cornflow-04: #6673ff33;

    --clr-dash-magenta-01: #ff3399;
    --clr-dash-magenta-02: #ff66b2;
    --clr-dash-magenta-03: #ff66b266;
    --clr-dash-magenta-04: #ff007f33;

    --clr-dash-dustmagenta-01: #cc297a;
    --clr-dash-dustmagenta-02: #d9418d;
    --clr-dash-dustmagenta-03: #d9418d66;
    --clr-dash-dustmagenta-04: #cc297a33;

    --clr-dash-dustpink-01: #e5515e;
    --clr-dash-dustpink-02: #e56772;
    --clr-dash-dustpink-03: #e7526366;
    --clr-dash-dustpink-04: #e5515e33;

    --clr-dash-dustblue-01: #4643bf;
    --clr-dash-dustblue-02: #5252cc;
    --clr-dash-dustblue-03: #5252cc66;
    --clr-dash-dustblue-04: #4f4cd933;

    --clr-dash-dustgreen-01: #4d993d;
    --clr-dash-dustgreen-02: #63a642;
    --clr-dash-dustgreen-03: #63a64266;
    --clr-dash-dustgreen-04: #4d993d33;

    --clr-dash-teal-01: #0fbda0;
    --clr-dash-teal-02: #36e2c6;
    --clr-dash-teal-03: #36e2c666;
    --clr-dash-teal-04: #0fbda033;

    --clr-dash-coffee-01: #965a3c;
    --clr-dash-coffee-02: #c86e46;
    --clr-dash-coffee-03: #c86e4666;
    --clr-dash-coffee-04: #965a3233;
}
:root {
    --space-2: 2px;
    --space-4: 4px;
    --space-5: 5px;
    --space-6: 6px;
    --space-8: 8px;
    --space-10: 10px;
    --space-12: 12px;
    --space-14: 14px;
    --space-16: 16px;
    --space-18: 18px;
    --space-20: 20px;
    --space-24: 24px;
    --space-28: 28px;
    --space-32: 32px;
    --space-40: 40px;
    --space-48: 48px;
}
@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/PyVcRbwHetz0gOVWLonWH7Od8zM.woff2') format('woff2'),
        url('//yastatic.net/islands/_/bIx8jOfCEfR-mECoDUEZywDBuHA.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/7_GKBdKFbUPzKlghJRv55xgz0FQ.woff2') format('woff2'),
        url('//yastatic.net/islands/_/SmqPmIMEXrW4lOY8QrhTUVDbrro.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/6Roy0LCd05cK4nNCipgzheYcNVU.woff2') format('woff2'),
        url('//yastatic.net/islands/_/KtHQR1erf3spayoIM4M4ngg0e2E.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: optional;
}

body,
input,
textarea,
button {
    font-family: 'YS Text', arial, sans-serif;
}

:root {
    --line-height-13: 13px;
    --line-height-14: 14px;
    --line-height-16: 16px;
    --line-height-18: 18px;
    --line-height-20: 20px;
    --line-height-24: 24px;
    --line-height-28: 28px;
    --line-height-32: 32px;
    --line-height-40: 40px;

    --font-size-11: 11px;
    --font-size-12: 12px;
    --font-size-14: 14px;
    --font-size-16: 16px;
    --font-size-20: 20px;
    --font-size-24: 24px;
    --font-size-32: 32px;
}
:root {
    --shdw-popover: 0px 0px 3px rgba(165, 177, 202, 0.3), 0px 10px 40px rgba(165, 177, 202, 0.3);
    --shdw-el-focused: 0 0 0 2px var(--clr-el-blue-060);
}
.multi-story {
    font-size: 16px;
}

    .multi-story__group {
        margin-bottom: 24px;
    }

    .multi-story__group-title {
        font-weight: 700;
        margin-bottom: 12px;
        white-space: pre;
    }

    .multi-story__group-items {
        display: flex;
    }

    .multi-story__item {
        margin-right: 32px;
    }

    .multi-story__item-title {
        margin-bottom: 8px;
    }
.modal__modal {
        position: relative;
        animation: modal-hide 0.3s ease-in-out;
        margin: auto 0;
    }
    @keyframes modal-show {
        0% {
            transform: translate3d(0, -10px, 0) scale(0.9);
        }

        100% {
            transform: translate3d(0, 0, 0) scale(1);
        }
    }
    @keyframes modal-hide {
        0% {
            transform: translate3d(0, 0, 0) scale(1);
        }

        100% {
            transform: translate3d(0, 40px, 0) scale(0.9);
        }
    }
    @keyframes overlay-show {
        0% {
            opacity: 0;
        }

        100% {
            opacity: 1;
        }
    }
    @keyframes overlay-hide {
        0% {
            opacity: 1;
        }

        100% {
            opacity: 0;
        }
    }
    .modal__modal-cross {
        position: absolute;
        cursor: pointer;
        top: var(--space-12);
        right: var(--space-12);
        color: var(--clr-str-black-050);
        z-index: 1;
    }
    .modal__modal-cross:hover {
            color: var(--clr-str-black-800);
        }
    .modal__modal-cross_view_dark {
            color: var(--clr-str-pure-white-050);
        }
    .modal__modal-cross_view_dark:hover {
                color: var(--clr-str-white-100);
            }
    .modal__overlay_visible .modal__modal {
        animation: modal-show 0.3s ease-in-out;
    }
    .modal__overlay.modal__overlay_visible {
        animation: overlay-show 0.3s ease-in-out forwards;
    }
    .modal__overlay {
        opacity: 0;
        animation: overlay-hide 0.3s ease-in-out;
        padding: 60px 0;
        position: fixed;
        overflow: auto;
        display: flex;
        justify-content: center;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
    }
    .modal__overlay_default-view {
            background-color: var(--clr-el-gray-060);
            backdrop-filter: blur(8px);
        }
body > div::-webkit-scrollbar {
    visibility: visible;
}

.scrollable-container__vert-scroll-bar {
        right: 0;
        bottom: 0;
        top: 0;
        padding: var(--space-4) var(--space-2);
        background: var(--clr-bg-gray-3);
    }

.scrollable-container__vert-scroll-thumb {
        border-radius: 16px;
        background-color: var(--clr-el-gray-050);
    }
.promo-modal {
    --promo-modal-media-height: 376px;
    --promo-modal-border-radius: 20px;

    border-radius: var(--promo-modal-border-radius);
    background-color: var(--clr-bg-gray-1);
    width: 760px;
    min-height: 608px;
    position: relative;
}

    .promo-modal__step {
        opacity: 1;
    }

    .promo-modal__step-text-content {
        padding: var(--promo-modal-media-height) var(--space-48) var(--space-28) var(--space-48);
    }

    .promo-modal__step-media-container {
        top: 0;
        border-top-left-radius: var(--promo-modal-border-radius);
        border-top-right-radius: var(--promo-modal-border-radius);
        position: absolute;
        overflow: hidden;
        width: 100%;
        height: var(--promo-modal-media-height);
    }

    .promo-modal__step-title {
        margin-top: 0;
        margin-bottom: var(--space-12);
        color: var(--clr-el-gray-080);
        font-weight: 500;
        font-size: var(--font-size-32);
        line-height: var(--line-height-40);
    }
.button {
    border: none;
    cursor: pointer;
    background-color: transparent;
    padding: 0;
    outline: none;
}
    .button:focus-visible .button__shape {
        box-shadow: var(--shdw-el-focused);
    }
    .button__shape {
        display: flex;
        align-items: center;
        justify-content: center;
        transition: transform 0.1s ease-out, color 0.15s linear;
        color: var(--clr-el-gray-080);
        border-radius: var(--button-border-radius);
    }
    .button_rounded .button__shape {
        border-radius: calc(
            (
                    var(--button-mode-text-vertical-padding) * 2 + var(--button-line-height) +
                        var(--button-text-padding-bottom)
                ) / 2
        );
    }
    .button:active .button__shape {
        transition: none;
        transform: scale(0.96);
    }
    .button:disabled .button__shape,
    .button:disabled:hover .button__shape {
        transform: scale(1);
        background-color: var(--clr-el-gray-020);
        color: var(--clr-el-gray-050);
        cursor: default;
    }
    .button_mode_icon .button__shape {
            padding: var(--button-mode-icon-padding);
        }
    .button_mode_text .button__shape {
            padding: var(--button-mode-text-padding);
        }
    .button_with-left-icon .button__shape {
        padding-left: var(--button-mode-text-with-icon-horizontal-padding);
    }
    .button_with-right-icon .button__shape {
        padding-right: var(--button-mode-text-with-icon-horizontal-padding);
    }
    .button_size_s32 {
            --button-border-radius: 10px;
            --button-font-size: 14px;
            --button-line-height: 20px;

            --button-mode-text-vertical-padding: 5px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-12);
            --button-mode-text-with-icon-horizontal-padding: var(--space-8);
            --button-text-padding-bottom: var(--space-2);

            --button-mode-icon-padding: var(--space-8);
        }
    .button_size_s36 {
            --button-border-radius: 12px;
            --button-font-size: 14px;
            --button-line-height: 20px;

            --button-mode-text-padding: var(--space-8) var(--space-16);
            --button-mode-text-with-icon-horizontal-padding: var(--space-12);
            --button-text-padding-bottom: 0;

            --button-mode-icon-padding: 10px;
        }
    .button_size_s44 {
            --button-border-radius: 14px;
            --button-font-size: 16px;
            --button-line-height: 24px;

            --button-mode-text-vertical-padding: 10px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-20);
            --button-mode-text-with-icon-horizontal-padding: 14px;
            --button-text-padding-bottom: 0px;

            --button-mode-icon-padding: 10px;
        }
    .button_size_s56 {
            --button-border-radius: 14px;
            --button-font-size: 20px;
            --button-line-height: 28px;

            --button-mode-text-vertical-padding: 13px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-20);
            --button-mode-text-with-icon-horizontal-padding: 14px;
            --button-text-padding-bottom: var(--space-2);

            --button-mode-icon-padding: var(--space-16);
        }
    .button_view_contrast .button__shape {
            background-color: var(--clr-bg-gray-1);
        }
    .button_view_contrast .button__shape:hover {
                background-color: var(--clr-bg-gray-2);
            }
    .button_view_contrast .button__shape:active {
                background-color: var(--clr-bg-gray-2);
            }
    .button_view_shade .button__shape {
            background-color: var(--clr-el-gray-020);
        }
    .button_view_shade .button__shape:hover {
                background-color: var(--clr-el-gray-030);
            }
    .button_view_shade .button__shape:active {
                background-color: var(--clr-el-gray-030);
            }
    .button_view_primary .button__shape {
            background-color: var(--clr-el-yellow-100);
        }
    .button_view_primary .button__shape:hover {
                background-color: var(--clr-el-yellow-200);
            }
    .button_view_primary .button__shape:active {
                background-color: var(--clr-el-yellow-200);
            }
    .button_view_contour .button__shape {
            box-shadow: inset 0 0 0 1px var(--clr-el-gray-030);
        }
    .button_view_contour .button__shape:hover {
                box-shadow: inset 0 0 0 1px var(--clr-el-gray-040);
            }
    .button_width_max {
            width: 100%;
        }
    .button_width_auto {
            width: auto;
            max-width: max-content;
        }
    .button_with-left-icon .button__text {
        margin-left: 8px;
    }
    .button_with-right-icon .button__text {
        margin-right: 8px;
    }
    .button__text {
        font-weight: 400;
        text-align: center;
        white-space: nowrap;
        user-select: none;
        font-size: var(--button-font-size);
        line-height: var(--button-line-height);
        padding-bottom: var(--button-text-padding-bottom);
    }
.svg-direction-icon {
    transition-duration: 0.1s;
    transition-property: transform;
}

    .svg-direction-icon_direction_left {
            transform: rotate(90deg);
        }

    .svg-direction-icon_direction_right {
            transform: rotate(-90deg);
        }

    .svg-direction-icon_direction_up {
            transform: rotate(180deg);
        }

    .svg-direction-icon_direction_down {
            transform: rotate(0deg);
        }
.promo-wizard__step-container {
        display: flex;
        position: relative;
        flex-flow: row nowrap;
    }
    .promo-wizard__step {
        width: 100%;
        box-sizing: border-box;
        flex: none;
    }
    .promo-wizard__step:nth-child(2) {
            margin-left: -100%;
        }
    .promo-wizard__step_visible {
            animation: step-show 0.3s ease-in forwards;
        }
    .promo-wizard__step_hidden {
            animation: step-hide 0.3s ease-in forwards;
        }
    .promo-wizard__step_previous {
            pointer-events: none;
            opacity: 0;
        }
    @keyframes step-show {
        0% {
            opacity: 0;
        }

        100% {
            opacity: 1;
        }
    }
    @keyframes step-hide {
        0% {
            opacity: 1;
        }

        100% {
            opacity: 0;
        }
    }
    .promo-wizard__step-icon {
        display: flex;
        cursor: pointer;
        color: var(--clr-el-gray-030);
        padding: var(--space-8);
    }
    .promo-wizard__step-icon:hover.promo-wizard__step-icon:not(.promo-wizard__step-icon_current) {
            color: var(--clr-el-gray-040);
        }
    .promo-wizard__step-icon_current {
            color: var(--clr-el-gray-050);
        }
    .promo-wizard__footer {
        display: flex;
        align-items: center;
        justify-content: space-between;
        padding: var(--space-20) var(--space-48) var(--space-20) var(--space-40);
    }
    .promo-wizard__step-icons {
        display: flex;
        align-items: center;
    }
    .promo-wizard__buttons {
        display: flex;
        align-items: center;
    }
    .promo-wizard__buttons > *:not(:last-child) {
        margin-right: var(--space-12);
    }
.text-cutter__text {
        position: relative;
        overflow: hidden;
        transition: max-height 0.1s linear;
    }
    .text-cutter__fade {
        position: absolute;
        bottom: 0;
        height: 40px;
        width: 100%;
        background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, var(--clr-bg-gray-1) 100%);
    }
    .text-cutter__button {
        margin-top: var(--space-4);
    }
.link {
    cursor: pointer;
    text-decoration: none;
    display: inline-block;
    border-radius: 2px;
    outline: none;
}
    .link:focus-visible {
        box-shadow: var(--shdw-el-focused);
    }
    .link_view_base {
            color: var(--clr-el-blue-100);
        }
    .link_view_shade {
            color: var(--clr-el-gray-060);
        }
    .link_view_tertiary {
            color: var(--clr-str-black-800);
        }
    .link_view_tertiary:hover {
                 color: var(--clr-el-red-100);
            }
    .link_view_tertiary:active {
                color: var(--clr-el-gray-050);
            }
    .link_view_base,
        .link_view_shade {
            display: initial;
            font-weight: 400;
            text-decoration: none;
        }
    .link_view_base:hover,
            .link_view_base:active,
            .link_view_shade:hover,
            .link_view_shade:active {
                color: var(--clr-el-gray-080);
            }
    .link_size_s14 {
            font-size: 14px;
            line-height: 20px;
        }
    .link_size_s20 {
            font-size: 20px;
            line-height: 32px;
        }
.markdown__h4 {
        font-size: var(--font-size-16);
        line-height: var(--line-height-24);
    }
    .markdown__p,
    .markdown__h3 {
        font-size: var(--font-size-20);
        line-height: var(--line-height-28);
    }
    .markdown__h2 {
        font-size: var(--font-size-24);
        line-height: var(--line-height-32);
    }
    .markdown__h1 {
        font-size: var(--font-size-32);
        line-height: var(--line-height-40);
    }
    .markdown__strong,
    .markdown__h1,
    .markdown__h2,
    .markdown__h3,
    .markdown__h4,
    .markdown__h5,
    .markdown__h6 {
        font-weight: 700;
    }
    .markdown__p,
    .markdown__h1,
    .markdown__h2,
    .markdown__h3,
    .markdown__h4,
    .markdown__h5,
    .markdown__h6,
    .markdown__ol,
    .markdown__ul {
        color: var(--clr-el-gray-080);
        margin: var(--space-14) 0;
    }
    .markdown__h1,
    .markdown__h2,
    .markdown__h3,
    .markdown__h4,
    .markdown__h5,
    .markdown__h6 {
        margin: var(--space-16) 0 var(--space-14) 0;
    }
    .markdown__p:first-child {
            margin-top: 0;
        }
    .markdown__p:last-child {
            margin-bottom: 0;
        }
.player {
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
}

    .player__body {
        width: 100%;
        height: 100%;
        opacity: 0;
    }

    .player__body_video-loaded {
            opacity: 1;
            transition: opacity 0.3s ease-in-out;
        }

<div style=\\"z-index:999\\" data-testid=\\"modal-overlay\\" class=\\"modal__overlay modal__overlay_visible modal__overlay_default-view\\"><div class=\\"modal__modal promo-modal\\"><div data-testid=\\"modal-cross\\" class=\\"modal__modal-cross modal__modal-cross_view_dark\\"><svg width=\\"24px\\" fill=\\"currentColor\\" height=\\"24px\\" viewBox=\\"0 0 24 24\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M19.2071 6.20711C19.5976 5.81658 19.5976 5.18342 19.2071 4.79289C18.8166 4.40237 18.1834 4.40237 17.7929 4.79289L12 10.5858L6.20711 4.79289C5.81658 4.40237 5.18342 4.40237 4.79289 4.79289C4.40237 5.18342 4.40237 5.81658 4.79289 6.20711L10.5858 12L4.79289 17.7929C4.40237 18.1834 4.40237 18.8166 4.79289 19.2071C5.18342 19.5976 5.81658 19.5976 6.20711 19.2071L12 13.4142L17.7929 19.2071C18.1834 19.5976 18.8166 19.5976 19.2071 19.2071C19.5976 18.8166 19.5976 18.1834 19.2071 17.7929L13.4142 12L19.2071 6.20711Z\\"></path></svg></div><div class=\\"promo-wizard\\"><div class=\\"promo-wizard__step-container\\"><div class=\\"promo-wizard__step\\"><div><div class=\\"promo-modal__step\\"><div class=\\"promo-modal__step-media-container\\"><img src=\\"https://s3.mds.yandex.net/internal-appmetrica-betas/ui-projects/_/997426c035dd4ddda68027f19112fffc.png\\" alt=\\"image\\" width=\\"100%\\" height=\\"344\\"/></div><div class=\\"promo-modal__step-text-content\\"><h1 class=\\"promo-modal__step-title\\">Аналитика ваших приложений стала еще удобнее</h1><div style=\\"max-height:84px\\" class=\\"text-cutter__text\\"><div><p class=\\"markdown__p\\">Встречайте обновленный интерфейс AppMetrica. Мы переработали навигацию и домашнюю страницу платформы, чтобы сделать их удобнее и информативнее. Теперь работать с аналитикой в AppMetrica еще проще.</p></div><div class=\\"text-cutter__fade\\"></div></div><div class=\\"text-cutter__button\\"><a class=\\"link link_view_base link_size_s20\\">Читать далее...</a></div></div></div></div></div></div><div class=\\"promo-wizard__footer\\"><div class=\\"promo-wizard__step-icons\\"><div data-testid=\\"step-point-0\\" class=\\"promo-wizard__step-icon promo-wizard__step-icon_current\\"><svg width=\\"6\\" height=\\"6\\" viewBox=\\"0 0 6 6\\" xmlns=\\"http://www.w3.org/2000/svg\\"><rect width=\\"6\\" height=\\"6\\" rx=\\"3\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" fill=\\"currentColor\\"></rect></svg></div></div><div class=\\"promo-wizard__buttons\\"><button class=\\"button button_width_auto button_size_s56 button_view_primary button_mode_text\\" data-testid=\\"nextButton\\"><div class=\\"button__shape\\"><span class=\\"button__text\\">Что изменилось</span></div></button></div></div></div></div></div>"
`;

exports[`Modal screenshot with image with custom position  1`] = `
":root {
    --clr-bg-gray-1: #ffffff;
    --clr-bg-gray-2: #f6f8fb;
    --clr-bg-gray-3: #eff2f7;
    --clr-bg-gray-500: #a3acbf;

    --clr-el-gray-000: #ffffff;
    --clr-el-gray-010: #cad6ee1a;
    --clr-el-gray-015: #b0bdd626;
    --clr-el-gray-020: #b0bdd633;
    --clr-el-gray-030: #a5b1ca4d;
    --clr-el-gray-040: #8694b066;
    --clr-el-gray-050: #475a8080;
    --clr-el-gray-060: #1a2b4d99;
    --clr-el-gray-070: #000c24b2;
    --clr-el-gray-080: #2f3747;
    --clr-el-gray-090: #121725f2;

    --clr-el-yellow-010: #ffdd574d;
    --clr-el-yellow-020: #ffdd578c;
    --clr-el-yellow-100: #ffdd57;
    --clr-el-yellow-200: #ffd21f;
    --clr-el-yellow-300: #f7c408;

    --clr-el-red-010: #dd00001a;
    --clr-el-red-020: #dd000033;
    --clr-el-red-040: #dd000066;
    --clr-el-red-060: #dd000099;
    --clr-el-red-100: #dd0000;

    --clr-el-green-010: #33b34326;
    --clr-el-green-020: #33b34340;
    --clr-el-green-060: #33b343b2;
    --clr-el-green-100: #33b343;

    --clr-el-blue-010: #498bff33;
    --clr-el-blue-060: #498bffb2;
    --clr-el-blue-100: #498bff;

    --clr-str-black-050: #475a807f;
    --clr-str-black-800: #2f3747;
    --clr-str-black-900: #252a38;

    --clr-str-white-060: #afc2e699;
    --clr-str-white-080: #d1e1ffcc;
    --clr-str-white-100: #fff;

    --clr-str-pure-white-050: #ffffff7f;
    --clr-str-pure-white-060: #ffffffb3;

    --clr-bg-app: var(--clr-bg-gray-3);

    --clr-dash-green-01: #65b812;
    --clr-dash-green-02: #9dd926;
    --clr-dash-green-03: #9dd92666;
    --clr-dash-green-04: #65b81233;

    --clr-dash-yellow-01: #ffcc00;
    --clr-dash-yellow-02: #ffe666;
    --clr-dash-yellow-03: #ffe66666;
    --clr-dash-yellow-04: #ffcc0033;

    --clr-dash-orange-01: #ff9a33;
    --clr-dash-orange-02: #ffb851;
    --clr-dash-orange-03: #ffb85166;
    --clr-dash-orange-04: #ff9a3333;

    --clr-dash-red-01: #e53c1a;
    --clr-dash-red-02: #ff6647;
    --clr-dash-red-03: #ff664766;
    --clr-dash-red-04: #e53c1a33;

    --clr-dash-violet-01: #7a45e6;
    --clr-dash-violet-02: #aa80ff;
    --clr-dash-violet-03: #7a45e533;
    --clr-dash-violet-04: #6e30e833;

    --clr-dash-blue-01: #3388ff;
    --clr-dash-blue-02: #66b3ff;
    --clr-dash-blue-03: #66b3ff66;
    --clr-dash-blue-04: #3388ff33;

    --clr-dash-grey-01: #c2c9d6;
    --clr-dash-grey-02: #e0e6ef;
    --clr-dash-grey-03: #e0e6ef66;
    --clr-dash-grey-04: #c2c9d633;

    --clr-dash-cornflow-01: #6673ff;
    --clr-dash-cornflow-02: #99a2ff;
    --clr-dash-cornflow-03: #99a2ff66;
    --clr-dash-cornflow-04: #6673ff33;

    --clr-dash-magenta-01: #ff3399;
    --clr-dash-magenta-02: #ff66b2;
    --clr-dash-magenta-03: #ff66b266;
    --clr-dash-magenta-04: #ff007f33;

    --clr-dash-dustmagenta-01: #cc297a;
    --clr-dash-dustmagenta-02: #d9418d;
    --clr-dash-dustmagenta-03: #d9418d66;
    --clr-dash-dustmagenta-04: #cc297a33;

    --clr-dash-dustpink-01: #e5515e;
    --clr-dash-dustpink-02: #e56772;
    --clr-dash-dustpink-03: #e7526366;
    --clr-dash-dustpink-04: #e5515e33;

    --clr-dash-dustblue-01: #4643bf;
    --clr-dash-dustblue-02: #5252cc;
    --clr-dash-dustblue-03: #5252cc66;
    --clr-dash-dustblue-04: #4f4cd933;

    --clr-dash-dustgreen-01: #4d993d;
    --clr-dash-dustgreen-02: #63a642;
    --clr-dash-dustgreen-03: #63a64266;
    --clr-dash-dustgreen-04: #4d993d33;

    --clr-dash-teal-01: #0fbda0;
    --clr-dash-teal-02: #36e2c6;
    --clr-dash-teal-03: #36e2c666;
    --clr-dash-teal-04: #0fbda033;

    --clr-dash-coffee-01: #965a3c;
    --clr-dash-coffee-02: #c86e46;
    --clr-dash-coffee-03: #c86e4666;
    --clr-dash-coffee-04: #965a3233;
}
:root {
    --space-2: 2px;
    --space-4: 4px;
    --space-5: 5px;
    --space-6: 6px;
    --space-8: 8px;
    --space-10: 10px;
    --space-12: 12px;
    --space-14: 14px;
    --space-16: 16px;
    --space-18: 18px;
    --space-20: 20px;
    --space-24: 24px;
    --space-28: 28px;
    --space-32: 32px;
    --space-40: 40px;
    --space-48: 48px;
}
@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/PyVcRbwHetz0gOVWLonWH7Od8zM.woff2') format('woff2'),
        url('//yastatic.net/islands/_/bIx8jOfCEfR-mECoDUEZywDBuHA.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/7_GKBdKFbUPzKlghJRv55xgz0FQ.woff2') format('woff2'),
        url('//yastatic.net/islands/_/SmqPmIMEXrW4lOY8QrhTUVDbrro.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/6Roy0LCd05cK4nNCipgzheYcNVU.woff2') format('woff2'),
        url('//yastatic.net/islands/_/KtHQR1erf3spayoIM4M4ngg0e2E.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: optional;
}

body,
input,
textarea,
button {
    font-family: 'YS Text', arial, sans-serif;
}

:root {
    --line-height-13: 13px;
    --line-height-14: 14px;
    --line-height-16: 16px;
    --line-height-18: 18px;
    --line-height-20: 20px;
    --line-height-24: 24px;
    --line-height-28: 28px;
    --line-height-32: 32px;
    --line-height-40: 40px;

    --font-size-11: 11px;
    --font-size-12: 12px;
    --font-size-14: 14px;
    --font-size-16: 16px;
    --font-size-20: 20px;
    --font-size-24: 24px;
    --font-size-32: 32px;
}
:root {
    --shdw-popover: 0px 0px 3px rgba(165, 177, 202, 0.3), 0px 10px 40px rgba(165, 177, 202, 0.3);
    --shdw-el-focused: 0 0 0 2px var(--clr-el-blue-060);
}
.multi-story {
    font-size: 16px;
}

    .multi-story__group {
        margin-bottom: 24px;
    }

    .multi-story__group-title {
        font-weight: 700;
        margin-bottom: 12px;
        white-space: pre;
    }

    .multi-story__group-items {
        display: flex;
    }

    .multi-story__item {
        margin-right: 32px;
    }

    .multi-story__item-title {
        margin-bottom: 8px;
    }
.modal__modal {
        position: relative;
        animation: modal-hide 0.3s ease-in-out;
        margin: auto 0;
    }
    @keyframes modal-show {
        0% {
            transform: translate3d(0, -10px, 0) scale(0.9);
        }

        100% {
            transform: translate3d(0, 0, 0) scale(1);
        }
    }
    @keyframes modal-hide {
        0% {
            transform: translate3d(0, 0, 0) scale(1);
        }

        100% {
            transform: translate3d(0, 40px, 0) scale(0.9);
        }
    }
    @keyframes overlay-show {
        0% {
            opacity: 0;
        }

        100% {
            opacity: 1;
        }
    }
    @keyframes overlay-hide {
        0% {
            opacity: 1;
        }

        100% {
            opacity: 0;
        }
    }
    .modal__modal-cross {
        position: absolute;
        cursor: pointer;
        top: var(--space-12);
        right: var(--space-12);
        color: var(--clr-str-black-050);
        z-index: 1;
    }
    .modal__modal-cross:hover {
            color: var(--clr-str-black-800);
        }
    .modal__modal-cross_view_dark {
            color: var(--clr-str-pure-white-050);
        }
    .modal__modal-cross_view_dark:hover {
                color: var(--clr-str-white-100);
            }
    .modal__overlay_visible .modal__modal {
        animation: modal-show 0.3s ease-in-out;
    }
    .modal__overlay.modal__overlay_visible {
        animation: overlay-show 0.3s ease-in-out forwards;
    }
    .modal__overlay {
        opacity: 0;
        animation: overlay-hide 0.3s ease-in-out;
        padding: 60px 0;
        position: fixed;
        overflow: auto;
        display: flex;
        justify-content: center;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
    }
    .modal__overlay_default-view {
            background-color: var(--clr-el-gray-060);
            backdrop-filter: blur(8px);
        }
body > div::-webkit-scrollbar {
    visibility: visible;
}

.scrollable-container__vert-scroll-bar {
        right: 0;
        bottom: 0;
        top: 0;
        padding: var(--space-4) var(--space-2);
        background: var(--clr-bg-gray-3);
    }

.scrollable-container__vert-scroll-thumb {
        border-radius: 16px;
        background-color: var(--clr-el-gray-050);
    }
.promo-modal {
    --promo-modal-media-height: 376px;
    --promo-modal-border-radius: 20px;

    border-radius: var(--promo-modal-border-radius);
    background-color: var(--clr-bg-gray-1);
    width: 760px;
    min-height: 608px;
    position: relative;
}

    .promo-modal__step {
        opacity: 1;
    }

    .promo-modal__step-text-content {
        padding: var(--promo-modal-media-height) var(--space-48) var(--space-28) var(--space-48);
    }

    .promo-modal__step-media-container {
        top: 0;
        border-top-left-radius: var(--promo-modal-border-radius);
        border-top-right-radius: var(--promo-modal-border-radius);
        position: absolute;
        overflow: hidden;
        width: 100%;
        height: var(--promo-modal-media-height);
    }

    .promo-modal__step-title {
        margin-top: 0;
        margin-bottom: var(--space-12);
        color: var(--clr-el-gray-080);
        font-weight: 500;
        font-size: var(--font-size-32);
        line-height: var(--line-height-40);
    }
.button {
    border: none;
    cursor: pointer;
    background-color: transparent;
    padding: 0;
    outline: none;
}
    .button:focus-visible .button__shape {
        box-shadow: var(--shdw-el-focused);
    }
    .button__shape {
        display: flex;
        align-items: center;
        justify-content: center;
        transition: transform 0.1s ease-out, color 0.15s linear;
        color: var(--clr-el-gray-080);
        border-radius: var(--button-border-radius);
    }
    .button_rounded .button__shape {
        border-radius: calc(
            (
                    var(--button-mode-text-vertical-padding) * 2 + var(--button-line-height) +
                        var(--button-text-padding-bottom)
                ) / 2
        );
    }
    .button:active .button__shape {
        transition: none;
        transform: scale(0.96);
    }
    .button:disabled .button__shape,
    .button:disabled:hover .button__shape {
        transform: scale(1);
        background-color: var(--clr-el-gray-020);
        color: var(--clr-el-gray-050);
        cursor: default;
    }
    .button_mode_icon .button__shape {
            padding: var(--button-mode-icon-padding);
        }
    .button_mode_text .button__shape {
            padding: var(--button-mode-text-padding);
        }
    .button_with-left-icon .button__shape {
        padding-left: var(--button-mode-text-with-icon-horizontal-padding);
    }
    .button_with-right-icon .button__shape {
        padding-right: var(--button-mode-text-with-icon-horizontal-padding);
    }
    .button_size_s32 {
            --button-border-radius: 10px;
            --button-font-size: 14px;
            --button-line-height: 20px;

            --button-mode-text-vertical-padding: 5px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-12);
            --button-mode-text-with-icon-horizontal-padding: var(--space-8);
            --button-text-padding-bottom: var(--space-2);

            --button-mode-icon-padding: var(--space-8);
        }
    .button_size_s36 {
            --button-border-radius: 12px;
            --button-font-size: 14px;
            --button-line-height: 20px;

            --button-mode-text-padding: var(--space-8) var(--space-16);
            --button-mode-text-with-icon-horizontal-padding: var(--space-12);
            --button-text-padding-bottom: 0;

            --button-mode-icon-padding: 10px;
        }
    .button_size_s44 {
            --button-border-radius: 14px;
            --button-font-size: 16px;
            --button-line-height: 24px;

            --button-mode-text-vertical-padding: 10px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-20);
            --button-mode-text-with-icon-horizontal-padding: 14px;
            --button-text-padding-bottom: 0px;

            --button-mode-icon-padding: 10px;
        }
    .button_size_s56 {
            --button-border-radius: 14px;
            --button-font-size: 20px;
            --button-line-height: 28px;

            --button-mode-text-vertical-padding: 13px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-20);
            --button-mode-text-with-icon-horizontal-padding: 14px;
            --button-text-padding-bottom: var(--space-2);

            --button-mode-icon-padding: var(--space-16);
        }
    .button_view_contrast .button__shape {
            background-color: var(--clr-bg-gray-1);
        }
    .button_view_contrast .button__shape:hover {
                background-color: var(--clr-bg-gray-2);
            }
    .button_view_contrast .button__shape:active {
                background-color: var(--clr-bg-gray-2);
            }
    .button_view_shade .button__shape {
            background-color: var(--clr-el-gray-020);
        }
    .button_view_shade .button__shape:hover {
                background-color: var(--clr-el-gray-030);
            }
    .button_view_shade .button__shape:active {
                background-color: var(--clr-el-gray-030);
            }
    .button_view_primary .button__shape {
            background-color: var(--clr-el-yellow-100);
        }
    .button_view_primary .button__shape:hover {
                background-color: var(--clr-el-yellow-200);
            }
    .button_view_primary .button__shape:active {
                background-color: var(--clr-el-yellow-200);
            }
    .button_view_contour .button__shape {
            box-shadow: inset 0 0 0 1px var(--clr-el-gray-030);
        }
    .button_view_contour .button__shape:hover {
                box-shadow: inset 0 0 0 1px var(--clr-el-gray-040);
            }
    .button_width_max {
            width: 100%;
        }
    .button_width_auto {
            width: auto;
            max-width: max-content;
        }
    .button_with-left-icon .button__text {
        margin-left: 8px;
    }
    .button_with-right-icon .button__text {
        margin-right: 8px;
    }
    .button__text {
        font-weight: 400;
        text-align: center;
        white-space: nowrap;
        user-select: none;
        font-size: var(--button-font-size);
        line-height: var(--button-line-height);
        padding-bottom: var(--button-text-padding-bottom);
    }
.svg-direction-icon {
    transition-duration: 0.1s;
    transition-property: transform;
}

    .svg-direction-icon_direction_left {
            transform: rotate(90deg);
        }

    .svg-direction-icon_direction_right {
            transform: rotate(-90deg);
        }

    .svg-direction-icon_direction_up {
            transform: rotate(180deg);
        }

    .svg-direction-icon_direction_down {
            transform: rotate(0deg);
        }
.promo-wizard__step-container {
        display: flex;
        position: relative;
        flex-flow: row nowrap;
    }
    .promo-wizard__step {
        width: 100%;
        box-sizing: border-box;
        flex: none;
    }
    .promo-wizard__step:nth-child(2) {
            margin-left: -100%;
        }
    .promo-wizard__step_visible {
            animation: step-show 0.3s ease-in forwards;
        }
    .promo-wizard__step_hidden {
            animation: step-hide 0.3s ease-in forwards;
        }
    .promo-wizard__step_previous {
            pointer-events: none;
            opacity: 0;
        }
    @keyframes step-show {
        0% {
            opacity: 0;
        }

        100% {
            opacity: 1;
        }
    }
    @keyframes step-hide {
        0% {
            opacity: 1;
        }

        100% {
            opacity: 0;
        }
    }
    .promo-wizard__step-icon {
        display: flex;
        cursor: pointer;
        color: var(--clr-el-gray-030);
        padding: var(--space-8);
    }
    .promo-wizard__step-icon:hover.promo-wizard__step-icon:not(.promo-wizard__step-icon_current) {
            color: var(--clr-el-gray-040);
        }
    .promo-wizard__step-icon_current {
            color: var(--clr-el-gray-050);
        }
    .promo-wizard__footer {
        display: flex;
        align-items: center;
        justify-content: space-between;
        padding: var(--space-20) var(--space-48) var(--space-20) var(--space-40);
    }
    .promo-wizard__step-icons {
        display: flex;
        align-items: center;
    }
    .promo-wizard__buttons {
        display: flex;
        align-items: center;
    }
    .promo-wizard__buttons > *:not(:last-child) {
        margin-right: var(--space-12);
    }
.text-cutter__text {
        position: relative;
        overflow: hidden;
        transition: max-height 0.1s linear;
    }
    .text-cutter__fade {
        position: absolute;
        bottom: 0;
        height: 40px;
        width: 100%;
        background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, var(--clr-bg-gray-1) 100%);
    }
    .text-cutter__button {
        margin-top: var(--space-4);
    }
.link {
    cursor: pointer;
    text-decoration: none;
    display: inline-block;
    border-radius: 2px;
    outline: none;
}
    .link:focus-visible {
        box-shadow: var(--shdw-el-focused);
    }
    .link_view_base {
            color: var(--clr-el-blue-100);
        }
    .link_view_shade {
            color: var(--clr-el-gray-060);
        }
    .link_view_tertiary {
            color: var(--clr-str-black-800);
        }
    .link_view_tertiary:hover {
                 color: var(--clr-el-red-100);
            }
    .link_view_tertiary:active {
                color: var(--clr-el-gray-050);
            }
    .link_view_base,
        .link_view_shade {
            display: initial;
            font-weight: 400;
            text-decoration: none;
        }
    .link_view_base:hover,
            .link_view_base:active,
            .link_view_shade:hover,
            .link_view_shade:active {
                color: var(--clr-el-gray-080);
            }
    .link_size_s14 {
            font-size: 14px;
            line-height: 20px;
        }
    .link_size_s20 {
            font-size: 20px;
            line-height: 32px;
        }
.markdown__h4 {
        font-size: var(--font-size-16);
        line-height: var(--line-height-24);
    }
    .markdown__p,
    .markdown__h3 {
        font-size: var(--font-size-20);
        line-height: var(--line-height-28);
    }
    .markdown__h2 {
        font-size: var(--font-size-24);
        line-height: var(--line-height-32);
    }
    .markdown__h1 {
        font-size: var(--font-size-32);
        line-height: var(--line-height-40);
    }
    .markdown__strong,
    .markdown__h1,
    .markdown__h2,
    .markdown__h3,
    .markdown__h4,
    .markdown__h5,
    .markdown__h6 {
        font-weight: 700;
    }
    .markdown__p,
    .markdown__h1,
    .markdown__h2,
    .markdown__h3,
    .markdown__h4,
    .markdown__h5,
    .markdown__h6,
    .markdown__ol,
    .markdown__ul {
        color: var(--clr-el-gray-080);
        margin: var(--space-14) 0;
    }
    .markdown__h1,
    .markdown__h2,
    .markdown__h3,
    .markdown__h4,
    .markdown__h5,
    .markdown__h6 {
        margin: var(--space-16) 0 var(--space-14) 0;
    }
    .markdown__p:first-child {
            margin-top: 0;
        }
    .markdown__p:last-child {
            margin-bottom: 0;
        }
.player {
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
}

    .player__body {
        width: 100%;
        height: 100%;
        opacity: 0;
    }

    .player__body_video-loaded {
            opacity: 1;
            transition: opacity 0.3s ease-in-out;
        }

<div style=\\"z-index:999\\" data-testid=\\"modal-overlay\\" class=\\"modal__overlay modal__overlay_visible modal__overlay_default-view\\"><div class=\\"modal__modal promo-modal\\"><div data-testid=\\"modal-cross\\" class=\\"modal__modal-cross modal__modal-cross_view_dark\\"><svg width=\\"24px\\" fill=\\"currentColor\\" height=\\"24px\\" viewBox=\\"0 0 24 24\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M19.2071 6.20711C19.5976 5.81658 19.5976 5.18342 19.2071 4.79289C18.8166 4.40237 18.1834 4.40237 17.7929 4.79289L12 10.5858L6.20711 4.79289C5.81658 4.40237 5.18342 4.40237 4.79289 4.79289C4.40237 5.18342 4.40237 5.81658 4.79289 6.20711L10.5858 12L4.79289 17.7929C4.40237 18.1834 4.40237 18.8166 4.79289 19.2071C5.18342 19.5976 5.81658 19.5976 6.20711 19.2071L12 13.4142L17.7929 19.2071C18.1834 19.5976 18.8166 19.5976 19.2071 19.2071C19.5976 18.8166 19.5976 18.1834 19.2071 17.7929L13.4142 12L19.2071 6.20711Z\\"></path></svg></div><div class=\\"promo-wizard\\"><div class=\\"promo-wizard__step-container\\"><div class=\\"promo-wizard__step\\"><div><div class=\\"promo-modal__step\\"><div class=\\"promo-modal__step-media-container\\" style=\\"top:-15px\\"><img src=\\"https://s3.mds.yandex.net/internal-appmetrica-betas/ui-projects/_/34dd737584cb42ca9c8f4b612e67f447.png\\" alt=\\"image\\" width=\\"100%\\" height=\\"368\\"/></div><div class=\\"promo-modal__step-text-content\\"><h1 class=\\"promo-modal__step-title\\">Все ключевые метрики на одном дашборде</h1><div style=\\"max-height:84px\\" class=\\"text-cutter__text\\"><div><p class=\\"markdown__p\\">Главный экран AppMetrica превратился в дашборд с ключевыми метрикам вашего приложения. В нем собраны такие метрики, как активные пользователи, User Acquisition, Retention, Revenue, Средний чек и другие. Используйте их, чтобы комплексно оценивать состояние приложения.</p>
<p class=\\"markdown__p\\">Чтобы перейти к детальному отчету, просто кликните по интересующему виджету. Кроме того, вы можете выбирать воронку в виде виджета и отслеживать конверсию прямо на главном экране, а AppMetrica подскажет на каком шаге сильнее всего падает конверсия.</p></div><div class=\\"text-cutter__fade\\"></div></div><div class=\\"text-cutter__button\\"><a class=\\"link link_view_base link_size_s20\\">Подробнее</a></div></div></div></div></div></div><div class=\\"promo-wizard__footer\\"><div class=\\"promo-wizard__step-icons\\"><div data-testid=\\"step-point-0\\" class=\\"promo-wizard__step-icon promo-wizard__step-icon_current\\"><svg width=\\"6\\" height=\\"6\\" viewBox=\\"0 0 6 6\\" xmlns=\\"http://www.w3.org/2000/svg\\"><rect width=\\"6\\" height=\\"6\\" rx=\\"3\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" fill=\\"currentColor\\"></rect></svg></div></div><div class=\\"promo-wizard__buttons\\"><button class=\\"button button_width_auto button_size_s56 button_view_primary button_mode_text\\" data-testid=\\"nextButton\\"><div class=\\"button__shape\\"><span class=\\"button__text\\">Читать далее...</span></div></button></div></div></div></div></div>"
`;
